hphp/test/zend/bad/ext/reflection/tests/ReflectionParameter_export_basic.php
<?php
function ReflectionParameterTest($test, $test2 = null) {
	echo $test;
}
$reflect = new ReflectionFunction('ReflectionParameterTest');
foreach($reflect->getParameters() as $key => $value) {
	echo ReflectionParameter::export('ReflectionParameterTest', $key);
}
?>
==DONE==
